# c-nauka

./: 1.Variables.c  10.Functions.c  11.Return-statement.c  12.Ternary-operator.c  13.Function-prototypes.c  14.String-functions.c  15.For-loops.c  16.While-loops.c  17.Arrays.c  18.2D-arrays.c  19.Array-of-strings.c  2.Constants.c  20.Sort-an-array.c  21.Structs.c  22.Typedef.c  23.Enums.c  24.Random-numbers.c  25.Number-guessing-game.c  26.Memory-addresses.c  27.Pointers.c  28.Writing-files.c  29.Reading-files.c  3.User-input.c  4.Circle-circumference-program.c  5.Hypotenuse-calculator-program.c  6.If-statements.c  7.Switch-statements.c  8.Temperatore-conversion-program.c  9.Logical-operators.c  CMakeLists.txt
algorytmy/: Algorytm-eukulidesa.c  Miejsca-zerowe-funkcji.c
projekty/: Record-database.c
