cmake_minimum_required(VERSION 3.26)
project(nauka C)

set(CMAKE_C_STANDARD 23)

add_executable(nauka 1.Variables.c
        2.Constants.c
        3.User-input.c
        4.Circle-circumference-program.c
        5.Hypotenuse-calculator-program.c
        6.If-statements.c
        7.Switch-statements.c
        8.Temperatore-conversion-program.c
        9.Logical-operators.c
        10.Functions.c
        11.Return-statement.c
        12.Ternary-operator.c
        13.Function-prototypes.c
        14.String-functions.c
        15.For-loops.c
        16.While-loops.c
        algorytmy/Algorytm-eukulidesa.c
        algorytmy/Miejsca-zerowe-funkcji.c
        17.Arrays.c
        18.2D-arrays.c
        19.Array-of-strings.c
        20.Sort-an-array.c
        21.Structs.c
        22.Typedef.c
        23.Enums.c
        24.Random-numbers.c
)
